[tool.poetry]
name = "appdemo"
version = "0.1.0"
description = ""
authors = ["eolandro <eolandro@gmx.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
sanic = "^24.12.0"
aiosqlite = "^0.21.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
